<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".AddCompanyActivity">

    <!-- Login progress -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/b"
        android:contentDescription="@string/error_imageView"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:importantForAutofill="no" tools:targetApi="o"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/company_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_address"
            android:inputType="text"
            android:maxLines="1"
            android:privateImeOptions="defaultInputmode=korean"
            android:singleLine="true"
            android:importantForAutofill="no" tools:targetApi="o"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_company"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton"
        android:text="@string/action_add_company"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>