<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".FindEmployeeContract"
    android:id="@+id/addEmployeeForm">

    <!-- Login progress -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/error_imageView"
        app:srcCompat="@drawable/b" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/employee_email"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/search_grey_27x27"
            android:importantForAutofill="no" tools:targetApi="o" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_find_employee_contract"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/action_find_employee"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>